fix: drawer menu z-index fix. added title pre-hero just after name logo in header

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -97,7 +97,6 @@
 }
 .header {
   position: relative;
-  z-index: 100;
   color: var(--g-color-foreground);
   transition: min-height 0.8s cubic-bezier(0.5, 0, 0, 1) 0s;
   will-change: min-height;
